--- a/index.html
+++ b/index.html
@@ -1,7 +1,10 @@
 <!DOCTYPE html>
 <html>
 <body>
-<h1>My first homepage</h1>
-<p>This is my first webpage on github.</p>
+<h1>Welcome to my first homepage</h1>
+  <h2>My info</h2>
+  <p>I am Chitranshu Chandel,an undergrad student of Aerospace Department at IIT Kanpur.</p>
+  <h2>My interests</h2>
+  <p> My interests are coding, playing chess, reading novels</p>
 </body>
 </html>
