--- a/index.html
+++ b/index.html
@@ -1,7 +1,16 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
+ <head>
+   <title>My homepage</title>
+   <meta charset=utf-8>
+   <style>
+     
+   </style>
+  </head>
 <body>
+  <div>
 <h1>Welcome to my first homepage</h1>
+    </div>
   <h2>My info</h2>
   <p>I am Chitranshu Chandel,an undergrad student of Aerospace Department at IIT Kanpur.</p>
   <h2>My interests</h2>
