--- a/index.html
+++ b/index.html
@@ -4,16 +4,23 @@
    <title>My homepage</title>
    <meta charset=utf-8>
    <style>
-     
+     .bg-1 {
+      background-color: #808080;
+      color: #ffffff;
+    }
    </style>
   </head>
 <body>
-  <div>
+  <div bg-1>
 <h1>Welcome to my first homepage</h1>
     </div>
+ <div>
   <h2>My info</h2>
   <p>I am Chitranshu Chandel,an undergrad student of Aerospace Department at IIT Kanpur.</p>
+ </div>
+ <div>
   <h2>My interests</h2>
   <p> My interests are coding, playing chess, reading novels</p>
-</body>
+ </div>
+  </body>
 </html>
