--- a/index.html
+++ b/index.html
@@ -7,11 +7,12 @@
      .bg-1 {
       background-color: #808080;
       color: #ffffff;
+      padding:70px;
     }
    </style>
   </head>
 <body>
-  <div class="bg-1">
+  <div class="bg-1 text-center">
 <h1>Welcome to my first homepage</h1>
     </div>
  <div>
