--- a/index.html
+++ b/index.html
@@ -3,6 +3,10 @@
  <head>
    <title>My homepage</title>
    <meta charset=utf-8>
+  <meta name ="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
    <style>
      .bg-1 {
       background-color: #808080;
@@ -12,10 +16,10 @@
    </style>
   </head>
 <body>
-  <div class="bg-1 text-center">
+  <div class="container-fluid bg-1 text-center">
 <h1>Welcome to my first homepage</h1>
     </div>
- <div>
+ <div class="container-fluid bg-2 text-center">
   <h2>My info</h2>
   <p>I am Chitranshu Chandel,an undergrad student of Aerospace Department at IIT Kanpur.</p>
  </div>
